Name:                   excel-form-maker
Version:                0.0.0
Author:                 Scott Murphy<scottmurphy09@gmail.com>
Maintainer:             Scott Murphy<scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.2
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Data.Excel.FormPopulate
  Other-Modules:        Data.Excel.FormPopulate.Internal
  Build-Depends:        base                     >= 4         &&   < 5
                       ,lens                     >= 3.2       &&   < 3.9
                       ,xlsx                     >= 0.0.1.1   &&   < 0.0.2.0
                       ,hspec                    >= 1.7.2     &&   < 1.7.3
                       ,safe                     >= 0.3.3     &&   < 0.4.3
                       ,text                     >= 0.11.3.1  &&   < 0.11.3.3
                       ,containers               >= 0.5.3.1   &&   < 0.5.3.2
                       ,transformers             >= 0.3.0.0
                       ,monad-control
                       ,network
                       ,yesod-core
                       ,yesod                  
                       ,template-haskell
                       ,persistent-template                       
                       ,persistent-mongoDB
                       ,persistent

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
                        ,src
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , excel-form-maker
                      , hspec


Executable excel-form-maker
    main-is:            Main.hs
    HS-Source-Dirs:     src
    build-depends:      base
                                          
    ghc-options:      -threaded -O2 -rtsopts

Source-Repository head
  Type:                 git
--  Location:             
